Adding institution analysis

--- a/mining.ipynb
+++ b/mining.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -32,7 +32,7 @@
        "True"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -148,7 +148,7 @@
        "4  wmswm  2004  "
       ]
      },
-     "execution_count": 29,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -160,8 +160,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Authors"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -190,7 +197,7 @@
        "Name: authors, dtype: int64"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -204,8 +211,62 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Institutions"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "COPPE/UFRJ      20\n",
+       "USP             19\n",
+       "UFMG            18\n",
+       "UFBA            15\n",
+       "UFSCar          12\n",
+       "IFBA             8\n",
+       "UFLA             7\n",
+       "UNIFOR           7\n",
+       "UNIFACS          6\n",
+       "UFF              6\n",
+       "UFU              5\n",
+       "UCB              4\n",
+       "PUC Minas        4\n",
+       "CEFET Campos     4\n",
+       "UFCG             4\n",
+       "UFPA             4\n",
+       "UFRGS            4\n",
+       "UECE             3\n",
+       "UFG              2\n",
+       "UTFPR            2\n",
+       "Name: institutions, dtype: int64"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['institutions'].apply(unidecode).str.split('; ').explode().value_counts().head(20)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Title bigrams"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -234,7 +295,7 @@
        "Name: title, dtype: int64"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -245,7 +306,7 @@
     "from nltk.tokenize import RegexpTokenizer\n",
     "\n",
     "# @TODO: unificar o idioma\n",
-    "# @TODO: unificar plural e singular (stem)\n",
+    "# @TODO: unificar plural e singular (stemming)\n",
     "\n",
     "title = df['title'].str.upper()\\\n",
     "                   .apply(unidecode)\\\n",
@@ -258,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -267,7 +328,7 @@
        "<AxesSubplot: >"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -290,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
