Collects citations from papers using Google Scholar.

--- a/mining.ipynb
+++ b/mining.ipynb
@@ -348,20 +348,11 @@
     "#df.plot(kind='bar')\n",
     "df.boxplot()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#df.to_excel('publications.xlsx', index=False)"
-   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.6 ('vem2004-2022-ipJFqA09')",
+   "display_name": "Python 3.10.6 64-bit ('3.10.6')",
    "language": "python",
    "name": "python3"
   },
@@ -380,7 +371,7 @@
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "e0b4d188c6740b86f22827d7e3ed60f52146a1f8e6f7a564c5dab9fbeb32dd39"
+    "hash": "17818fa2069ad3be0ce4a91c78608737cca5603f1f4c58fb7b682fb2ad76e1a6"
    }
   }
  },
